[package]
name = "landlock"
version = "0.4.1"
edition = "2021"
rust-version = "1.63"
description = "Landlock LSM helpers"
homepage = "https://landlock.io"
repository = "https://github.com/landlock-lsm/rust-landlock"
license = "MIT OR Apache-2.0"
keywords = ["access-control", "linux", "sandbox", "security"]
categories = ["api-bindings", "os::linux-apis", "virtualization", "filesystem"]
exclude = [".gitignore"]
readme = "README.md"

[dependencies]
libc = "0.2.133"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
lazy_static = "1"
strum = "0.26"
strum_macros = "0.26"
